--- a/http_api/makefile
+++ b/http_api/makefile
@@ -1,12 +1,11 @@
 ## Build all binaries -> command is : make build | make run
 build:
 
-	go build -o bin/credentials credentials.go
-	go build -o bin/models objects_models.go
+	go build -o bin/credentials Credentials/credentials.go
+	go build -o bin/models Models/models.go
 	go build -o bin/models ../main.go
-	go build -o bin/database_ops database_ops.go
-    go build -o bin/models controllers.go
-
+	go build -o bin/database_ops Database/database_ops.go
+    go build -o bin/models Routing/routes.go
 
 run:
 	go run ../main.go
